syntax = "proto3";

package go.micro.srv.DelSession;

service Example {
	rpc DelSession(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string Sessionid = 1;
}

message Response {
	string Errno = 1;
	string Errmsg = 2;
}

