syntax = "proto3";

package go.micro.srv.GetArea;

service Example {
	// 获取地址信息服务
	rpc GetArea(Request) returns (Response) {}

	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string ErrNo = 1; // 错误编码
	string ErrMsg = 2; // 错误信息
	message Address {
		int32 aid = 1; // 地区ID
		string aname = 2; // 地区名称
	}
	repeated Address Data = 3; // 响应成功后返回的数据，格式：[{"aid":"aname"}, ..]
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
